# gae-progress

./: ReadMe.md  app.yaml  index.yaml  models.py  progress_api.py  utils.py
backend/: ReadMe.md  app.yaml  endpoint_services.py  index.yaml
backend/progress/: ReadMe.md  api.py  constants.py  utils.py
backend/www/: ReadMe.md  index.html
backend/www/js/: controllers.js
backend/www/views/: create_modal.html
client/: progress.py
clients/cpp-qt5/: CMakeLists.txt  ReadMe.md  constants.h  main.cpp  tasks.h
clients/java/: .classpath  .project  ReadMe.md
clients/java/src/com/appspot/progress_1181/progressApi/: ProgressApi.java  ProgressApiRequest.java  ProgressApiRequestInitializer.java  ProgressApiScopes.java
clients/java/src/com/appspot/progress_1181/progressApi/model/: ProgressModelsCreateProgressRequestMessage.java  ProgressModelsCreateProgressResponseMessage.java  ProgressModelsDeleteProgressRequestMessage.java  ProgressModelsProgressResponseMessage.java  ProgressModelsQueryProgressResponseMessage.java  ProgressModelsUpdateProgressRequestMessage.java  ProgressModelsUserResponseMessage.java
clients/java/src/progress/: ProgressExample.java
clients/python-gapi/: ReadMe.md  progress.py
clients/www/: ReadMe.md
html/: index.html
html/js/: application.js
static/: index.html
static/js/: app.js  controllers.js
static/views/: create.html  edit_modal.html  home.html  profile.html
